--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "talkingbit/representation",
   "description": "Example of a representation pattern",
   "require": {
-    "php": "^8.1"
+    "php": "^8.1",
+    "ext-mbstring": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5.20"
